--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #003056;
   height: 150px;
   padding: 20px;
   color: white;
@@ -25,4 +25,16 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.primary{
+  color: #003056;
+}
+
+.secondary{
+  color: #ffffff;
+}
+
+.triary{
+  color: rgb(0,129,198);
 }
