--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,10 +1,10 @@
 .Toolbar{
-    height: 56px;
+    height: 52px;
     width: 100%;
     position:fixed;
     top:0;
     left:0;
-    background-color: rgba(255,255,255,.8);
+    background-color: #ffffff;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -21,6 +21,8 @@
 
 .Logo{
     height: 80%;
+    padding: 0px;
+    padding-top: 4px;
 }
 
 @media (max-width: 499px){
