--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -2,8 +2,8 @@
     display: flex;
     z-index: 10;
     position: fixed;
-    justify-content: center;
-    align-items: center;
+    
+    margin-top: 52px;
     height: 100%;
     width:100%;
 
