--- a/src/components/Home/User/User.css
+++ b/src/components/Home/User/User.css
@@ -1,9 +1,14 @@
 .FormCSS{
-    height: 500px;
-    width: 400px;
     display: flex;
-    margin: 5px;
     flex-direction: column;
-    padding-top: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+@media(max-width: 400px){
+    .FormCSS{
+        width: 95vw;
+        overflow:hidden;
+    }
 }
 
