--- a/src/components/Home/User/UserInfo/UserInfo.css
+++ b/src/components/Home/User/UserInfo/UserInfo.css
@@ -67,4 +67,25 @@
 	max-width:none;
   }
 
+  @media(max-width: 400px){
+
+    .ImgContainer{
+        padding-left: 20px;
+        padding-top: 10px;
+        margin-right: 0px;
+    }
+
+    .ImgWrapper{
+        max-width:100px;
+        max-height:100px;
+
+
+      }
+    
+      .ImgWrapper img {
+        height:100px;
+
+      }
+  }
+
 
