--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -1,8 +1,9 @@
 .Wrapper{
     width: 100%;
-    height: 90%;
     display: flex;
     position: fixed;
+    align-content: center;
+    justify-content: center;
+    padding-top: 15vh;
 
-    
 }
