--- a/src/components/Home/User/UserInfo/UserInfo.css
+++ b/src/components/Home/User/UserInfo/UserInfo.css
@@ -11,6 +11,7 @@
 .ImgContainer{
     flex: 1;
     margin-right: 30px;
+    position: relative;
 }
 
 .DataContainer{
@@ -55,7 +56,7 @@
 .ImgWrapper{
     max-width:128px;
     max-height:128px;
-    position: fixed;
+    position: absolute;
     overflow: hidden;
     border-radius:50%;
     border: 4px solid #003056;
