--- a/src/containers/Homepage/Homepage.css
+++ b/src/containers/Homepage/Homepage.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    width: 100%;
 }
 .RowAItemA{
     flex: 1;
@@ -26,3 +27,25 @@
     flex: 2;
 }
 
+
+
+/*Desktop Only Adjustments*/
+@media (min-width:400px){
+
+
+    .RowAItemB{
+        padding-left: 4px;
+
+    }
+}
+
+/*Mobile Adjustments*/
+@media (max-width:400px){
+    .Homepage{
+        overflow-y:scroll;
+    }
+
+    .RowAItemB{
+        margin-top: 8px;
+    }
+}
