Started mobile nav

--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -9,6 +9,25 @@
     
 }
 
+.ButtonCSS{
+    background-color: #003054;
+    border: none;
+    color: #fff;
+    outline: #003054;
+    font: inherit;
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    right: 0;
+    position:fixed;
+    margin-top: 0;
+}
+
+
 @media (min-width: 500px) {
     .NavigationItems{
         flex-flow: row;
