Finished Nav Bar With Animation

--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -7,11 +7,12 @@
 }
 
 .NavigationItem a {
-    color: #ffffff;
+    color: #003056;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
     display: block;
+    font-weight: bold;
 
 }
 
@@ -22,14 +23,16 @@
 }
 
 
-@media (min-width: 500px){
+@media (min-width: 668px){
 
     .NavigationItem{
+        color: white;
         margin: 0;
         display: flex;
         height: 100%;
         align-items: center;
         width: auto;
+        font-weight: 300;
         
     }
     
@@ -48,5 +51,12 @@
     .NavigationItem a.active{
         background-color: #003064;
         color:white;
+    }
+}
+
+@media(max-width:667px){
+    .NavigationItem{
+        text-align: center;
+        font-size: 40px;
     }
 }
