--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,8 +1,10 @@
+@import '../../constants/theme';
+
 .Divider{
 
     width: 100%;
     height: 2px;
-    background-color: #003054;
+    background-color: $primary;
     border: none;
 }
 
@@ -16,7 +18,6 @@
 
 .AdminText{
     text-align: center;
-    margin:0;
     margin-top:-10px;
-    padding-bottom: 10px;
+    color: $primary;
 }
