--- a/src/components/AdminPortal/Navigation/Navigation.scss
+++ b/src/components/AdminPortal/Navigation/Navigation.scss
@@ -1,16 +1,15 @@
+@import '../../../constants/theme';
 .Toolbar{
-    height: 52px;
-    width: 100%;
-    position:fixed;
-    top:0;
-    left:0;
-    background-color: #ffffff;
+    height: 48px;
+    width: 100vw;
+    background-color: $primary;
     display: flex;
     justify-content: left;
     align-items: center;
     padding: 0 20px;
     box-sizing: border-box;
     z-index: 90;
+    border-bottom: 1px solid $secondary;
 }
 
 .DesktopOnly{
@@ -21,10 +20,10 @@
 }
 
 .ButtonCSS{
-    background-color: #003054;
+    background-color: $primary;
     border: none;
-    color: #fff;
-    outline: #003054;
+    color: $secondary;
+    outline: $secondary;
     font: inherit;
     padding: 10px;
     margin: 4px;
@@ -38,10 +37,10 @@
 }
 
 .ButtonMobileCSS{
-    background-color: white;
+    background-color: $primary;
     border: none;
-    color: #003056;
-    outline: #003054;
+    color: $secondary;
+    outline: $secondary;
     font: inherit;
     padding: 8px;
     font-weight: bold;
@@ -49,7 +48,7 @@
     -ms-flex-pack: center;
     -ms-flex-align: center;
     border-radius: 4px;
-    border: 2px solid #003056;
+    border: 2px solid $secondary;
     right: 0;
 }
 
@@ -72,30 +71,4 @@
     .MobileOnly {
         display: none;
     }
-}
-
-//animation
-
-:global(.navigation-appear){
-    opacity: 0.01;
-}
-:global(.navigation-appear-active){
-    opacity: 0.01;
-    transition: all 600ms ease-in-out;
-}
-
-:global(.navigation-enter){
-    opacity: 0.01;
-}
-:global(.navigation-enter-active) {
-    opacity: 1;
-    transition: all 1300ms ease-in-out;
-}
-
-:global(.navigation-exit) {
-    opacity: 1;
-}
-:global(.navigation-exit-active) {
-    opacity: 0.01;
-    transition: all 600ms ease-in-out;
 }
