Added fade in/out transitions between all pages. Synced page fade out with toolbar on logout

--- a/src/hoc/Transition/Transition.scss
+++ b/src/hoc/Transition/Transition.scss
@@ -7,7 +7,7 @@
 }
 :global(.transition-enter-active) {
     opacity: 1;
-
+    transition-delay: 450ms;
     transition: all 400ms ease-in-out;
 }
 
