--- a/src/components/Blog/BlogPost/BlogPost.scss
+++ b/src/components/Blog/BlogPost/BlogPost.scss
@@ -12,29 +12,27 @@
 .postContainer{
     flex: 8;
     max-width: 900px;
-    min-height: 400px;
+    //min-height: 400px;
     align-items: inherit;
     -webkit-box-sizing: 'border-box';
     box-sizing: 'border-box';
     background-color: $secondary;
     border: 2px solid $primary;
-    border-radius: 8px;
+    border-radius: 2px;
     display: flex;
     flex-direction: row;
 }
 
 .userPostContainer{
     flex: 3;
-    height: 400px;
+    min-height: 400px;
     display: flex;
     flex-direction: column;
     border-right: 1px solid $primary;
 }
 
 .userInformationContainer{
-    flex: 1;
     height: 70px;
-    border-bottom: 1px solid $primary;
 }
 
 .postContentContainer{
