--- a/src/components/Blog/BlogPost/Options/Options.scss
+++ b/src/components/Blog/BlogPost/Options/Options.scss
@@ -2,25 +2,32 @@
 
 .container{
     display: flex;
-    flex-direction: column;
-    width: 80px;
+    flex-direction: row;
+    height: 80px;
 
 
 }
 
+.buttonContainer{
+    flex: 1;
+    display: flex;
+}
+
 .button{
+    flex: 1 1;
     height: 40px;
-    width: 40px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    background-color: $secondary;
-    border-radius: 4px; 
+    max-width: 40px;
+    margin: auto;
     text-align: center;
-    border: 2px solid $primary;
-    padding-top: 4px;
+    opacity: 1;
+    -webkit-transition: opacity .3s ease-in;
+    -o-transition: opacity .3s ease-in;
+    transition: opacity .3s ease-in;
 
 }
 
 .button:hover{
     cursor: pointer;
+    opacity: .8;
+    transition: opacity .3s ease-in;
 }
