--- a/src/components/UI/Button/CommentButton/CommentButton.scss
+++ b/src/components/UI/Button/CommentButton/CommentButton.scss
@@ -3,9 +3,12 @@
 
 .container{
     position: relative;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+/*
 .emblem{
     position: absolute;
     height: 26px;
@@ -18,12 +21,14 @@
     margin-top: 0px;
     
 }
+*/
 
 .emblemText{
-    font-size: 18px;
+    color: $primary;
+    font-size: 20px;
     font-weight: bold;
-    padding-top: 3px;
-    //padding-right: 1px;
+    padding-top: 1px;
+    padding-right: 1px;
 }
 
 .buttonColor{
