--- a/src/components/Blog/BlogPost/AddComment/AddComment.scss
+++ b/src/components/Blog/BlogPost/AddComment/AddComment.scss
@@ -7,10 +7,56 @@
 }
 
 .inputContainer{
-    flex: 2;
+    flex: 5;
+    flex-direction: column;
 }
+
+
+
+
+.textInput{
+    flex: 1;
+    background-color: $secondary;
+    //border: 0px solid black;
+    resize: none;
+    width: 100%;
+    height: 13px;
+    border: none;
+    border-bottom: 1px solid $primary;
+}
+
+.characterCounterContainer{
+    flex: 1;
+    text-align: right;
+    font-size: 12px;
+    color: $primary;
+}
+
+textarea:focus{
+    outline: none;
+}
+
 
 .submitContainer{
     flex: 1;
+    display: flex; 
+    flex-direction: column;
+}
+
+.sendButtonContainer{
+    flex: 1;
+}
+
+.sendButton{
+    background-color: $secondary;
+    flex: 1;
+    text-align: center;
+    cursor: pointer;
+}
+
+.buttonText{
+    font-size: 10px;
+    font-weight: bold;
+    color: $primary;
 }
 
