--- a/src/components/Blog/BlogPost/BlogPost.scss
+++ b/src/components/Blog/BlogPost/BlogPost.scss
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     border-right: 1px solid $primary;
+    background-color: $secondary;
 }
 
 .userInformationContainer{
