--- a/src/components/Blog/BlogPost/BlogPost.scss
+++ b/src/components/Blog/BlogPost/BlogPost.scss
@@ -11,11 +11,9 @@
 
 .postContainer{
     flex: 8;
-    //max-width: 500px;
-    max-height: 90vh;
     display: flex;
     flex-direction: row;
-    overflow: auto;
+    margin-bottom: 20px;
 }
 
 .FormCSS{
@@ -23,7 +21,7 @@
     -webkit-box-sizing: 'border-box';
     box-sizing: 'border-box';
     background-color: $secondary;
-    border: 2px solid $primary;
+    margin:2px; 
     border-radius: 2px;
 }
 
@@ -33,8 +31,8 @@
     max-width: 600px;
     display: flex;
     flex-direction: column;
-    border-right: 1px solid $primary;
-    background-color: $secondary;
+    //border-right: 1px solid $primary;
+    //background-color: $secondary;
 }
 
 .userInformationContainer{
