--- a/src/components/Blog/Comments/Comments.scss
+++ b/src/components/Blog/Comments/Comments.scss
@@ -1,9 +1,10 @@
 
 @import '../../../constants/theme';
 .container{
-    height: 100%;
+    //height: 100%;
+    //height:100vh;
     width: 100%;
-    overflow-y: scroll;
+    //overflow-y: scroll;
     flex: 1;
     flex-direction: column;
     padding-top: 2px;
