reformatted redux actions and reducers, added thunk middleware, added redux api calls for posts, user, and users on login

--- a/src/components/Blog/Comments/Comments.scss
+++ b/src/components/Blog/Comments/Comments.scss
@@ -23,7 +23,6 @@
 }
 
 .showComments{
-    background-color: $primary;
     color: $secondary;
     font-size: 20px;
     text-align: center;
@@ -34,5 +33,15 @@
     align-items: center;
     margin: 2px;
     display: flex;
+    
 
+}
+
+.active{
+    background-color: $primary;
+    cursor: pointer;
+}
+
+.innactive{
+    background-color: #59879C;
 }
