--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
+//import space mono font
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
