Added persistant state. Cleaned up console.logs()

--- a/src/components/Blog/BlogPost/Options/Options.scss
+++ b/src/components/Blog/BlogPost/Options/Options.scss
@@ -7,6 +7,9 @@
     background-color: $secondary;
     width: 60px;
 
+    //make the options the same height as a one line post with no comments
+    min-height: 284px;
+
 
 }
 
