--- a/src/components/Blog/BlogPost/AddComment/AddComment.scss
+++ b/src/components/Blog/BlogPost/AddComment/AddComment.scss
@@ -3,12 +3,13 @@
 .container{
     display: flex;
     flex-direction: row;
-    padding: 10px;
+    //padding: 10px;
 }
 
 .inputContainer{
-    flex: 5;
+    flex: 8;
     flex-direction: column;
+    padding: 10px;
 }
 
 
