Added Post likes which update DB and State data on Redux call

--- a/src/components/Blog/BlogPost/Options/Options.scss
+++ b/src/components/Blog/BlogPost/Options/Options.scss
@@ -8,7 +8,7 @@
     width: 60px;
 
     //make the options the same height as a one line post with no comments
-    min-height: 284px;
+    //min-height: 284px;
 
 
 }
