--- a/src/components/UI/Spinner/Spinner.scss
+++ b/src/components/UI/Spinner/Spinner.scss
@@ -1,11 +1,19 @@
 
 @import '../../../constants/theme';
 
+.background{
+    height:100vh;
+    width:100vw;
+    position:absolute;
+}
+
+.backgroundActive{
+    z-index: 20;
+}
 
 .container{
     position: absolute;
     width: 300px;
-    //max-height: 200px;
     left: 0;
     right: 0;
     z-index: 30;
@@ -16,31 +24,7 @@
     top: 27vh;
     border: 1px solid $primary;
 }
-.textBox{
-    flex: 2;
-    text-align: -webkit-center;
-    font-size: 30px;
-    padding: 4px;
-    justify-content: center;
 
-
-}
-.spinnerText{
-    font-size: 60px;
-    color: $primary;
-
-}
-.spinnerBox{
-
-    text-align: -webkit-center;
-    flex: 1;
-}
-.spinnerIcon{
-    align-items:'center';
-    max-height: 80px;
-    max-width: 80px;
-
-}
 
 //animate
 
