--- a/src/components/UI/Spinner/Confirmation/Confirmation.scss
+++ b/src/components/UI/Spinner/Confirmation/Confirmation.scss
@@ -31,14 +31,19 @@
     font-size: 20px;
 }
 
+.buttonContainer{
+    display: flex;
+    flex-direction: row;
+}
+
 .buttonCSS{
     border-radius: 10px;
     width: 100px;
-    margin: auto;
-    margin-bottom: 10px;
+    margin: 10px;
     background-color: $primary;
     text-align: center;
     padding: 10px;
     cursor:pointer;
+    flex: 1;
 }
 
