--- a/src/components/Blog/BlogPost/UserInfo/UserInfo.scss
+++ b/src/components/Blog/BlogPost/UserInfo/UserInfo.scss
@@ -15,7 +15,7 @@
     max-height: 60px;
     max-width: 60px;
     border-radius: 2px;
-    border: 1px solid  $primary;
+    //border: 1px solid  $primary;
 }
 
 .userInfoContainer{
