--- a/src/components/AdminPortal/Members/Toolbar/Toolbar.scss
+++ b/src/components/AdminPortal/Members/Toolbar/Toolbar.scss
@@ -5,5 +5,15 @@
     border-right: 1px solid $secondary;
     height: 100vh;
     width:200px;
+    
+    justify-content: center;
+   
+}
+
+.header{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 6px;
     color: $secondary;
 }
