--- a/src/components/AdminPortal/Members/SearchBar/SearchBar.scss
+++ b/src/components/AdminPortal/Members/SearchBar/SearchBar.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     padding: 10px;
-    flex: 1;
+    //flex: 1;
     color: $secondary;
     justify-content: center;
 }
