admin portal structuring, buttons added, search bar added, user status pages

--- a/src/components/AdminPortal/Members/UserList/UserList.scss
+++ b/src/components/AdminPortal/Members/UserList/UserList.scss
@@ -1,5 +1,9 @@
  .ListCSS{
     
-     
+     display: flex;
+     flex-direction: column;
+     flex: 2;
+     margin-right: 20px;
+     overflow-y: scroll;
    
     }
