--- a/src/components/AdminPortal/Members/UserList/UserView/UserView.scss
+++ b/src/components/AdminPortal/Members/UserList/UserView/UserView.scss
@@ -1,26 +1,87 @@
-.DataContainer {
+@import "../../../../../constants/theme";
+.Buttons {
     display: flex;
-    flex-direction: row;
-    padding-top: 2%;
-    background-color: #ffffff;
-    border-style: solid;
-    border-color:#003054;
-    width: 100%;
+    flex: 2;
+    align-items: center;
+
+}
+.button {
+    background-color: $primary;
+    border: none;
+    color: $secondary;
+    outline: $primary;
+    cursor: pointer;
+    font: inherit;
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.text {
+    font-size: 18px;
+    color: $secondary;
+    font-weight: bold;
+    text-align: center;
+    padding-left: 2px;
  
-   
 }
 
 .Data {
-    
-    width: 100%;
     display: flex;
+    flex-direction: row;
     flex: 1;
-    padding-top: 1%;
+    margin-top: 2px;
+    background-color: $secondary;
 
 }
 
-.ImgWrapper {
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom: 2%;
+
+.Img {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+
+}
+
+.Name {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+
+}
+
+
+
+.Email {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.Phone {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.Bond {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.Id {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+
 }
