Changed button organization on member information in members, added styling to user data

--- a/src/components/AdminPortal/Members/SearchBar/SearchBar.scss
+++ b/src/components/AdminPortal/Members/SearchBar/SearchBar.scss
@@ -16,6 +16,7 @@
     color: $secondary;
     border-bottom: 1px solid $secondary;
     width: 400px;
+    margin-right: 10px;
 }
 
 ::-webkit-input-placeholder{
