--- a/src/components/AdminPortal/Members/UserList/UserView/UserView.scss
+++ b/src/components/AdminPortal/Members/UserList/UserView/UserView.scss
@@ -1,28 +1,32 @@
 @import "../../../../../constants/theme";
-.Buttons {
-    display: flex;
-    flex: 2;
-    align-items: center;
 
-}
 .button {
-    background-color: $primary;
+    background-color: #003056;
     border: none;
-    color: $secondary;
-    outline: $primary;
+    color: #ffffff;
+    outline: #003056;
     cursor: pointer;
     font: inherit;
-    padding: 10px;
-    margin: 10px;
+    padding-left: 8px;
+    border-radius: 4px;
+    margin: 4px;
     font-weight: bold;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: center;
     justify-content: center;
+    -ms-flex-align: center;
     align-items: center;
+    padding-right: 8px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    flex: 1;
+    height: 30px;
     
 }
 
 .text {
-    font-size: 18px;
+    font-size: 12px;
     color: $secondary;
     font-weight: bold;
     text-align: center;
@@ -31,57 +35,64 @@
 }
 
 .Data {
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-direction: row;
     flex-direction: row;
-    flex: 1;
+    -ms-flex: 1 1;
+    flex: 1 1;
     margin-top: 2px;
-    background-color: $secondary;
+    background-color: #ffffff;
 
 }
 
 
 .Img {
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-direction: row;
     flex-direction: row;
-    flex: 1;
+    -ms-flex: 1 1;
+    flex: 0;
+    margin-right: 10px;
 
 }
 
-.Name {
+.dataStyling{
     padding-top: 25px;
-    display: flex;
-    flex-direction: row;
     flex: 1;
+    color: $primary;
+    font-weight: bold;
+}
 
+.label{
+    font-weight: normal;
+    font-style: italic; 
 }
 
 
-
-.Email {
-    padding-top: 25px;
+.Buttons {
     display: flex;
+    flex: 1 1;
+    -ms-flex-align: center;
+    -ms-flex-direction: column;
+    flex-direction: column;
+
+
+}
+
+.buttonsTopRow{
+    flex: 1 1;
+    -ms-flex-direction: row;
     flex-direction: row;
+    display: -ms-flexbox;
+    justify-content: center;
+    display: flex;
+    padding: 4px;
+    width: 360px;
+}
+
+.buttonsBottomRow{
     flex: 1;
 }
 
-.Phone {
-    padding-top: 25px;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-}
-
-.Bond {
-    padding-top: 25px;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-}
-
-.Id {
-    padding-top: 25px;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-
-}
