--- a/src/components/AdminPortal/Members/UserList/UserList.scss
+++ b/src/components/AdminPortal/Members/UserList/UserList.scss
@@ -1,3 +1,4 @@
+ @import '../../../../constants/theme';
  .ListCSS{
     
      display: flex;
@@ -7,3 +8,12 @@
      overflow-y: scroll;
    
     }
+
+.noData{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    color: $secondary;
+    font-weight: bold;
+}
