Added scroll lock for page up/down to not allow for whitespace to be shown at top/bottom of page when attempting to scroll up or down

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
 //import space mono font
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+
+html, body {margin: 0; height: 100%; overflow: hidden}
+
 body {
   margin: 0;
   padding: 0;
