--- a/src/components/AdminPortal/Members/UserList/UserList.scss
+++ b/src/components/AdminPortal/Members/UserList/UserList.scss
@@ -6,6 +6,9 @@
      flex: 2;
      margin-right: 20px;
      overflow-y: scroll;
+     padding-bottom: 180px;
+     box-sizing: border-box;
+     height: 100vh;
    
     }
 
