--- a/src/components/UI/Update/User/Position/Position.scss
+++ b/src/components/UI/Update/User/Position/Position.scss
@@ -11,6 +11,7 @@
     margin: 6px;
     text-align: center;
     padding: 8px;
+    cursor: pointer;
 }
 
 .title{
@@ -24,11 +25,13 @@
 }
 
 .iconContainer{
-    flex: 1;
+    flex: 1 1;
     text-align: center;
-    justify-content: center;
+    -ms-flex-pack: center;
     margin: auto;
     padding-left: 4px;
+    margin-top: -4px;
+
 }
 
 .icon{
