--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -1,5 +1,14 @@
+@import '../../constants/theme';
 .container{
     height: 88vh;
     overflow-y:scroll;
 
+}
+
+.header{
+    color: $secondary;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 40px;
 }
