Added scrollbar hide fix for firefox, fixed cursor display when hovering over position items

--- a/src/components/AdminPortal/Members/UserList/UserList.scss
+++ b/src/components/AdminPortal/Members/UserList/UserList.scss
@@ -9,6 +9,9 @@
      padding-bottom: 180px;
      box-sizing: border-box;
      height: 100vh;
+
+     //experimental remove scrollbar for firefox
+     scrollbar-width: none;
    
     }
 
