--- a/src/components/AdminPortal/Positions/DisplayPositions/Positions/Positions.scss
+++ b/src/components/AdminPortal/Positions/DisplayPositions/Positions/Positions.scss
@@ -21,8 +21,10 @@
 .textContainer{
     flex: 6;
     margin-top:2px;
+    cursor: default;
 }
 
 .iconContainer{
     flex: 1;
+    cursor: pointer;
 }
