--- a/src/containers/Profile/Profile.scss
+++ b/src/containers/Profile/Profile.scss
@@ -5,3 +5,10 @@
     align-items: center;
 
 }
+
+.placeholder{
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    padding-top: 40px;
+}
