--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    border-radius: 6px;
 }
 
 .Button:first-of-type {
