--- a/src/components/UI/Update/User/User.scss
+++ b/src/components/UI/Update/User/User.scss
@@ -12,12 +12,12 @@
     color: $primary;
     border-radius: 8px;
     width: 900px;
-    min-height: 600px;
-    max-height: 900px;
+    //min-height: 400px;
+    //@at-rootmax-height: 900px;
     margin-top: -150px;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    //flex: 1;
 }
 
 .topContainer{
@@ -105,6 +105,7 @@ input:focus {
 }
 
 .positionContainer{
+    flex: 1;
     padding: 10px;
     min-height: 138px;
 }
