--- a/src/components/Profile/User/User.scss
+++ b/src/components/Profile/User/User.scss
@@ -4,7 +4,8 @@
     background-color: $secondary;
     color: $primary;
     width: 100%;
-    //min-height: 300px;
+    height: 258px;
+    max-width: 918px;
     border-radius: 4px;
     display: flex;
     flex-direction: row;
@@ -21,8 +22,8 @@
 }
 
 .image{
-    height: 80%;
-    width: 80%;
+    height: 235px;
+    width: 235px;
     border-radius: 4px;
 }
 
