--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
@@ -1,4 +1,4 @@
-@import '../../../../constants/theme';
+@import '/../../../../constants/theme';
 
 //fade speed of the navbar tabs
 $tabFadeSpeed: 250ms;
