--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,10 @@
-@import './constants/theme';
-
+$primary:  #003056;
+$secondary: #ffffff;
+$triary: #0081c6;
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
 
 .App-header {
   background-color: $primary;
@@ -24,10 +21,6 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 
 .primary{
   color: $primary;
