--- a/src/components/AdminPortal/Members/UserList/UserView/Buttons/Removed/Removed.scss
+++ b/src/components/AdminPortal/Members/UserList/UserView/Buttons/Removed/Removed.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../../constants/theme";
+@import "/../../../../../../../constants/theme";
 
 .button {
     background-color: $primary;
